samples/_failures_safe/1761513384_3e9236_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2bcd69e9.c: In function ‘read_matrix’:
./samples/SAFE/__tmp_2bcd69e9.c:111:13: error: expected expression at end of input
  111 |             snprintf(prompt, sizeof(prompt), "Element [%d][%d]: ", i,
      |             ^~~~~~~~
./samples/SAFE/__tmp_2bcd69e9.c:111:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2bcd69e9.c:111:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2bcd69e9.c:111:13: error: expected declaration or statement at end of input
